add find OpenBabel modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ add_library(libsmina
 
 target_include_directories(libsmina PUBLIC src/lib/)
 
-find_package(boost REQUIRED)
+find_package(Boost REQUIRED)
 include_directories(libsmina ${Boost_INCLUDE_DIRS})
 target_link_libraries(libsmina ${Boost_LIBRARIES})
 message("-- Found Boost include files at ${Boost_INCLUDE_DIRS}")
@@ -28,8 +28,19 @@ find_package(Eigen3 REQUIRED)
 include_directories(libsmina ${EIGEN3_INCLUDE_DIRS})
 message("-- Found Eigen3 include files at ${EIGEN3_INCLUDE_DIRS}")
 
-find_package(OpenBabel2 REQUIRED)
-include_directories(libsmina ${OPENBABEL2_INCLUDE_DIR})
-target_link_libraries(libsmina ${OPENBABEL2_LIB})
+find_package(OpenBabel2)
+if(${OPENBABEL2_FOUND})
+  include_directories(libsmina ${OPENBABEL2_INCLUDE_DIR})
+  target_link_libraries(libsmina ${OPENBABEL2_LIBRARIES})
+  message("-- Found OpenBabel2 include files at  ${OPENBABEL2_INCLUDE_DIR}")
+  message("-- Found OpenBabel2 libraries at  ${OPENBABEL2_LIBRARIES}")
+else()
+  find_package(OpenBabel3 REQUIRED)
+  include_directories(libsmina ${OPENBABEL3_INCLUDE_DIR})
+  target_link_libraries(libsmina ${OPENBABEL3_LIBRARIES})
+  message("-- Found OpenBabel3 include files at  ${OPENBABEL3_INCLUDE_DIR}")
+  message("-- Found OpenBabel2 libraries at  ${OPENBABEL2_LIBRARIES}")
+endif()
 
 add_executable(smina src/main/main.cpp)
+target_link_libraries(smina libsmina)
